// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReduxFormCheckbox /> renders checked correctly 1`] = `
<form
  className=""
>
  <div
    className="pgn__form-checkbox"
  >
    <input
      checked={true}
      className="pgn__form-checkbox-input"
      defaultValue={false}
      disabled={false}
      id="id"
      type="checkbox"
    />
    <div>
      <label
        className="pgn__form-label"
        htmlFor="id"
      />
    </div>
  </div>
</form>
`;

exports[`<ReduxFormCheckbox /> renders unchecked correctly 1`] = `
<form
  className=""
>
  <div
    className="pgn__form-checkbox"
  >
    <input
      checked={false}
      className="pgn__form-checkbox-input"
      defaultValue={false}
      disabled={false}
      id="id"
      type="checkbox"
    />
    <div>
      <label
        className="pgn__form-label"
        htmlFor="id"
      />
    </div>
  </div>
</form>
`;
